--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <!--  <h1 class="textstyle"> Change the landscape </h1> !-->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -8,13 +9,19 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noticia+Text:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
     <script src="libraries/quicksettings.js"></script>
     <script src="libraries/p5.gui.js"></script>
+
   </head>
 
   <body>
     <script src="sketch.js"></script>
+    <div id='sketch-div'></div>
+  <!--  <p  class="pstyle">   Change the landscape </p> !-->
   </body>
 </html>
